# SimpleNN

./: CMakeLists.txt  README.md
src/: image_visualizer.hh  main.cc  mnist_reader.cc  mnist_reader.hh  simple_nn.cc  simple_nn.hh
tests/: test.cpp
